# crate-install-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs
