[package]
name = "crate-install-test"
version = "0.1.0"
authors = ["booink <booink.work@gmail.com>"]
repository = "https://github.com/booink/crate-install-test"
description = """
Crate install test
"""
edition = "2018"

[dependencies]
private-crate-test-1 = { git = "https://github.com/booink/private-crate", tag = "v1.0.0" }
private-crate-test-2 = { git = "https://github.com/booink/private-crate", tag = "v1.0.0" }
